--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<title> Dorme bem Mimillinda </title>
 	<link rel="stylesheet" href = "style.css"/>
+	<link rel = "icon"
+		type = "image/png"
+		href = "Latte35.png"/>
 </head>
 
 <body>
