--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href = "style.css"/>
 	<link rel = "icon"
 		type = "image/png"
-		href = "Latte35.png"/>
+		href = "/Latte35.png"/>
 </head>
 
 <body>
